# huffman_compression

./: .clang-format  CMakeLists.txt  build.sh
app/: CMakeLists.txt  main.cpp
compression/: CMakeLists.txt  compressor_base.h  hauffman_tree.cpp  hauffman_tree.h  thread_pool.cpp  thread_pool.h
test/: CMakeLists.txt  hauffman_tree_test.cpp
